# LinkedIn-Company-Analysis-Tool

./: .env.example  .gitignore  CLAUDE.md  README.md  prompt_plan.md  pyproject.toml  requirements.txt  setup.sh  spec.md  todo.md
demos/step_1/: README.md  demo.py
demos/step_2/: README.md  demo.py
demos/step_3/: README.md  demo.py
demos/step_4/: __init__.py  demo.py
docs/step_1/: comprehensive_step_1_guide.md  demo_doc.md  implementation_doc.md  poetry_migration.md  test_doc.md
docs/step_2/: comprehensive_step_2_guide.md
docs/step_4/: demo_doc.md  implementation_doc.md  test_doc.md
src/linkedin_analyzer/: __init__.py  main.py
src/linkedin_analyzer/api/: __init__.py  analysis.py  company_config.py  data_collection.py
src/linkedin_analyzer/models/: __init__.py  company.py  linkedin_data.py
src/linkedin_analyzer/nlp/: __init__.py  entity_recognizer.py  processing_pipeline.py  sentiment_analyzer.py  topic_extractor.py
src/linkedin_analyzer/services/: analysis_service.py  collection_service.py  data_collector.py  mock_data_generator.py
src/linkedin_analyzer/storage/: __init__.py  in_memory_store.py  memory_storage.py
tests/: __init__.py  test_analysis_api.py  test_company_config.py  test_data_collection.py  test_main.py
tests/nlp/: __init__.py  test_entity_recognizer.py  test_processing_pipeline.py  test_sentiment_analyzer.py  test_topic_extractor.py
